--- a/intermid_html_css/Grid_Practice/index.html
+++ b/intermid_html_css/Grid_Practice/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
     <div class="container">
-        <div>Item 1</div>
-        <div>Item 2
-            
-        </div>
-        <div>Item 3</div>
-        <div>Item 4</div>
+   
+  <div class="room" id="living-room">Living Room</div>
+  <div class="room" id="kitchen">Kitchen</div>
+  <div class="room" id="bedroom">Bedroom</div>
+  <div class="room" id="bedroom2">Bedroom</div>
+  <div class="room" id="bathroom">Bathroom</div>
+  <div class="room" id="closet">Closet</div>
+  <div class="room" id="closet">Closet</div>
+
 
     </div>
    
