gemini challenges on patterns, factory and closures

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+     <!-- <button id="btn1">Button 1</button>
+<button id="btn2">Button 2</button>
+<button id="btn3">Button 3 (The Arrow Function)</button> -->
 </body>
 <script src="script.js"></script></html>
