--- a/javascript/js_linting/form-validation/index.html
+++ b/javascript/js_linting/form-validation/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
   
-              <form class="task-form" action="">
+              <form class="task-form" action="" novalidate>
 
                 <div>
-                    <label for="mail">Add Task</label><input id="mail" type="email" placeholder="example@place.com">
+                    <label for="mail">E-Mail</label><input id="mail" type="email" placeholder="example@place.com">
                 </div>
 
                 <div>
@@ -25,8 +25,8 @@
                   </select>
                   <label for="postal">postal-code</label><input id="postal" type="text">
                 </div><div>
-                    <label for="password">Password</label><input id="password" type="password">
-                    <label for="confirm-password">Confirm Password</label><input id="confirm-password" type="password">
+                  <div> <label for="password">Password</label><input minlength="8" id="password" type="password"></div> 
+                    <div><label for="confirm-password">Confirm Password</label><input minlength="8" id="confirm-password" type="password"></div>
 
  </div>
            
@@ -37,6 +37,6 @@
                 </div>
             </form>
  
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
