--- a/javascript/js_linting/form-validation/index.html
+++ b/javascript/js_linting/form-validation/index.html
@@ -37,6 +37,6 @@
                 </div>
             </form>
  
-    <script type="module" src="script.js"></script>
+    <script type="module" src="./validators/script.js"></script>
 </body>
 </html>
