--- a/javascript/js_linting/form-validation/index.html
+++ b/javascript/js_linting/form-validation/index.html
@@ -11,7 +11,7 @@
               <form class="task-form" action="" novalidate>
 
                 <div>
-                    <label for="mail">E-Mail</label><input id="mail" type="email" placeholder="example@place.com">
+                    <label for="mail">E-Mail</label><input required id="mail" type="email" placeholder="example@place.com">
                 </div>
 
                 <div>
@@ -23,10 +23,10 @@
                     <option value="CA">CA</option>
                     <option value="RU">RU</option>
                   </select>
-                  <label for="postal">postal-code</label><input id="postal" type="text">
+                  <label for="postal">postal-code</label><input required id="postal" type="text">
                 </div><div>
-                  <div> <label for="password">Password</label><input minlength="8" id="password" type="password"></div> 
-                    <div><label for="confirm-password">Confirm Password</label><input minlength="8" id="confirm-password" type="password"></div>
+                  <div> <label for="password">Password</label><input required minlength="8" id="password" type="password"></div> 
+                    <div><label for="confirm-password">Confirm Password</label><input   id="confirm-password" type="password"></div>
 
  </div>
            
